fix preview container width on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ textarea {
   display: none;
   padding-left: 1rem;
   padding-right: 1rem;
+  width: 100%;
 }
 
 .toolbar {
